--- a/ooaclld/ooaclld/appconf.ini
+++ b/ooaclld/ooaclld/appconf.ini
@@ -1,10 +1,10 @@
 [clld]
 
-menuitems_list = parameters languages sources featuresets contributors
+menuitems_list = features languages sources featuresets contributors
 
 app_template = ooaclld.mako
 pacific_centered_maps = false
-sitemaps = language parameter source featureset contributor
+sitemaps = language feature source featureset contributor
 
 [mako]
 
