--- a/ooaclld/ooaclld/appconf.ini
+++ b/ooaclld/ooaclld/appconf.ini
@@ -1,6 +1,6 @@
 [clld]
 
-menuitems_list = parameters languages sources featuresets contributors
+menuitems_list = parameters languages references featuresets contributors
 
 app_template = ooaclld.mako
 pacific_centered_maps = false
