--- a/ooaclld/development.ini
+++ b/ooaclld/development.ini
@@ -6,8 +6,8 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-pyramid.includes = pyramid_debugtoolbar
-    #pyramid_tm
+pyramid.includes = 
+    pyramid_tm
 sqlalchemy.url = sqlite:///db.sqlite
 #sqlalchemy.url = postgresql://postgres@/ooaclld
 
